Added comments Fixed swagger
